# async-llm

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
data/: README.md
data/who_are_you/gemini_gemini-2.0-flash-exp/: info.json  request.json  response.json
data/who_are_you/openai_gpt-4o-mini/: info.json  request.json  response.json
data/who_are_you/openrouter_mistralai_mistral-7b-instruct_free/: info.json  request.json  response.json
data/who_are_you/together_meta-llama_Llama-3.3-70B-Instruct-Turbo-Free/: info.json  request.json  response.json
examples/: gemini.rs  generate.rs  ollama.rs  openai.rs  openrouter.rs
examples/utils/: constants.rs  mod.rs
src/: client.rs  error.rs  lib.rs  utils.rs
src/chat/: mod.rs  request.rs  response.rs
src/completions/: mod.rs  request.rs  response.rs
src/http/: mod.rs  simple.rs  stream.rs
src/providers/: config.rs  json.rs  mod.rs  openai.rs  raw.rs
src/request/: chat.rs  message.rs  mod.rs
src/requests/: chat.rs  message.rs
src/response/: chat.rs  mod.rs
src/types/: assistant_audio.rs  assistant_content.rs  assistant_function_call.rs  assistant_tool_call.rs  chat_audio.rs  chat_choice.rs  chat_function.rs  chat_function_call.rs  chat_response_format.rs  chat_tool.rs  chat_tool_choice.rs  completion_choice.rs  completion_usage.rs  content.rs  image_url.rs  input_audio.rs  mod.rs  modalities.rs  prediction_content.rs  reasoning_effort.rs  service_tier.rs  stop.rs  stream.rs  user_content.rs
tests/: test_offline.rs  test_openai.rs
tests/test_utils/: common_tests.rs  fs.rs  mod.rs
