[package]
name = "async-llm"
version = "0.1.0"
edition = "2021"
description = "A Rust library for OpenAI-compatible APIs"
license = "MIT"
authors = ["Quan Hua <quanhua92@gmail.com>"]
categories = ["api-bindings", "web-programming", "asynchronous"]
documentation = "https://docs.rs/async-llm"
homepage = "https://github.com/quanhua92/async-llm"
keywords = ["async", "llm", "openai", "ollama", "openrouter"]
repository = "https://github.com/quanhua92/async-llm"
exclude = [
  "data"
]

[dependencies]
async-trait = "0.1.85"
derive_builder = "0.20.2"
dotenvy = "0.15.7"
futures = "0.3.31"
reqwest = { version = "0.12.9", features = ["json", "stream"] }
reqwest-eventsource = "0.6.0"
secrecy = "0.10.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.10"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"

tracing = { version = "0.1.41", optional = true }
tracing-log = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"], optional = true }

[features]
default = ["use-tracing"]
use-tracing = ["tracing", "tracing-log", "tracing-subscriber"]

